--- a/module3-solution/css/sheet.css
+++ b/module3-solution/css/sheet.css
@@ -1,89 +1,94 @@
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
-#menu-categories-title{
-    margin: 40px auto;
-}
-
-#header-nav {
-    background-color: #999999;
-    border-radius: 0;
-    border: 0;
-    border: 2px solid black;
-}
-
-#collapsable-nav{
-    font-size: 1.4em;
+.container-fluid{
+	margin: 0;
+	padding: 0;
 }
 
 .navbar{
-    margin-bottom: 0px;
+	border-radius: 0px;
+	background-color: rgba(0,0,0,0.8);
+}
+
+.navbar-brand{
+  font-size: 35px;
+  color: white;
+  padding-left: 25px;
+}
+
+.navbar-brand:hover{
+	color: white;
+}
+
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar-toggle{
-    color:black;  
-    margin-top: 12px;
-} 
-
-.navbar-toggle a:visited{
-    color: inherit;
+	border: 2px solid white;
+	margin-right: 25px;
 }
 
-.sr-only, .icon-bar{
-    color: #000;
-    background: #000000;
+.icon-bar{
+	background-color: white;
 }
 
-.navbar-brand h1 { 
-    position: relative;
-    color: #000000;
-    font-size: 1.5em;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    text-decoration: none;
+
+.main-title{
+  margin-bottom: 15px;
+  text-align: center;
+  color: #000000;
+  font-size: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight: bold;
 }
 
-.navbar-brand a:hover{ 
-    text-decoration: none;
+li{
+	box-sizing: border-box;
+	width: 100%;
 }
 
-.navbar-brand {
-    padding-top: 5px;
-    margin-bottom: 10px;
+.menu-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
 }
 
-#nav-list {
-    margin-top: 0px;
-    padding: 0px;
-    margin-bottom: 0px;
-}
-#nav-list a{
-    background: #fff;
-    color: #000;
-    border-bottom: 2px solid black;
-}
-#nav-list a:hover {
-    background: #999999;
-    color: #fff;
-}
-#nav-list a span {
-    font-size: 1.8em;
+.menu-item:hover{
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
 }
 
-.category-tile { 
-    background: #999999;
-    margin-bottom: 35px; 
-    padding-bottom: 30px;
+
+
+.row{
+	margin: 20px;
 }
 
-#chicken, #beef, #sushi{
-    padding: 5px 20px;
-    font-size: 1.3em;
-    color: #000;
+.content-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
 }
 
-.btn{
-    margin-bottom: 50px;
-    border-radius: 0px;
+.item-name{
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
 }
+
